--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,12 +3,12 @@
       relink: true
       create: true
 
-- clean: ['~']
+- clean: ["~"]
 
 - link:
     ~/.tmux.conf: tmux.conf
-    # ~/.vim: vim
-    # ~/.vimrc: vimrc
+    ~/.tldrrc: tldrrc
+    ~/.config/nvim: nvim
 
 - shell:
-  - [git submodule update --init --recursive, Installing submodules]
+    - [git submodule update --init --recursive, Installing submodules]
