--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,8 @@
 set-option -g prefix M-s
 # split panes using | and -
 bind-key M-s send-prefix
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 # reload config file (change file location to your the tmux.conf you want to use)
@@ -20,49 +20,35 @@ set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
 # switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
-# 设置按键延迟时间
-set -sg escape-time 1
+# bind -n M-Left select-pane -L
+# bind -n M-Right select-pane -R
+# bind -n M-Up select-pane -U
+# bind -n M-Down select-pane -D
+# Shift Alt vim keys to switch windows
+bind -n M-Left previous-window
+bind -n M-Right next-window
+
 # 启动vi模式
 setw -g mode-keys vi
 # Fix Colors
-set -g default-terminal "xterm-256color"
-set -g @catppuccin_window_status_icon_enable "no"
+set-option -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-# theme配置
-set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "w:#W"
-set -g @catppuccin_window_default_text "w:#W"
-set -g @catppuccin_status_modules_right "session"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator " | "
-set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_current_fill "all"
-
-set -g @continuum-restore 'on'
-
+set -g pane-border-lines "heavy"
+# set -g @continuum-restore 'on'
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# plugin
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'niksingh710/minimal-tmux-status'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-# Shift arrow to switch windows
-bind -n S-Left previous-window
-bind -n S-Right next-window
 # set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'catppuccin/tmux'
 
 run '~/.tmux/plugins/tpm/tpm'
