添加incline nvim 修改行号颜色 去除navigator插件

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,17 +1,26 @@
-# remap prefix from 'C-b' to 'M-o' unbind C-b
+unbind C-b
+# remap prefix from 'C-b' to 'M-s' unbind C-b
 set-option -g prefix M-s
+
 # split panes using | and -
 bind-key M-s send-prefix
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
+
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
+
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
+
+# vi mode
+setw -g mode-keys vi
+
 # don't rename windows automatically
 set-option -g allow-rename off
+
 # DESIGN TWEAKS
 # don't do anything when a 'bell' rings
 set -g visual-activity off
@@ -19,22 +28,26 @@ set -g visual-bell off
 set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
-# switch panes using Alt-arrow without prefix
-# bind -n M-Left select-pane -L
-# bind -n M-Right select-pane -R
-# bind -n M-Up select-pane -U
-# bind -n M-Down select-pane -D
-# Shift Alt vim keys to switch windows
-bind -n M-Left previous-window
-bind -n M-Right next-window
+# theme
+set -g pane-border-lines "heavy"
 
-# 启动vi模式
-setw -g mode-keys vi
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift Alt  keys to switch windows
+bind -n S-Left previous-window
+bind -n S-Right next-window
+
+# shorten command delay
+set -sg escape-time 0
+
 # Fix Colors
 set-option -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g pane-border-lines "heavy"
-# set -g @continuum-restore 'on'
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
@@ -44,11 +57,11 @@ set-option -g renumber-windows on
 # plugin
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run '~/.tmux/plugins/tpm/tpm'
