启用continuum,去除tmux-fzf

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,15 +53,15 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-
+# continus recurrent session
+set -g @continuum-restore 'on'
 # plugin
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'niksingh710/minimal-tmux-status'
-set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run '~/.tmux/plugins/tpm/tpm'
