--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,6 @@
       ~/.zshrc: zshrc
       ~/.tldrrc: tldrrc
       ~/.config/nvim: nvim
-      ~/.oh-my-zsh/custom: custom
-- shell:
-      - [git submodule update --init --recursive, Installing submodules]
+      ~/.config/zellij/config.kdl: config.kdl
+# - shell:
+#       - [git submodule update --init --recursive, Installing submodules]
