添加 mise 配置文件

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,5 +12,6 @@
       ~/.tldrrc: tldrrc
       ~/.config/nvim: nvim
       ~/.config/zellij/config.kdl: config.kdl
+      ~/.config/mise/config.toml: config.toml
 # - shell:
 #       - [git submodule update --init --recursive, Installing submodules]
