--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,17 +1,18 @@
 - defaults:
-      link:
-          relink: true
-          create: true
+    link:
+      relink: true
+      create: true
 
 - clean: ["~"]
 
 - link:
-      ~/.tmux.conf: tmux.conf
-      ~/.vimrc: vimrc
-      ~/.zshrc: zshrc
-      ~/.tldrrc: tldrrc
-      ~/.config/nvim: nvim
-      ~/.config/zellij/config.kdl: config.kdl
-      ~/.config/mise/config.toml: config.toml
+    ~/.tmux.conf: tmux.conf
+    ~/.vimrc: vimrc
+    ~/.zshrc: zshrc
+    ~/.tldrrc: tldrrc
+    ~/.config/nvim: nvim
+    ~/.config/zellij/config.kdl: config.kdl
+    ~/.config/mise/config.toml: config.toml
+    ~/.ideavimrc: ideavimrc
 # - shell:
 #       - [git submodule update --init --recursive, Installing submodules]
