添加duf ,dust,fzf等工具使用mise来进行管理

--- a/config.toml
+++ b/config.toml
@@ -6,3 +6,9 @@ gradle = "latest"
 java = "temurin-21"
 python = "latest"
 neovim = "latest"
+duf = "latest"
+dust = "latest"
+fzf = "latest"
+
+[settings]
+idiomatic_version_file_enable_tools = []
